--- a/BookStore.FrontEnd.Site/Views/Shared/_Layout.cshtml
+++ b/BookStore.FrontEnd.Site/Views/Shared/_Layout.cshtml
@@ -20,12 +20,20 @@
             <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
                     <li>@Html.ActionLink("首頁", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
-                <ul class="navbar-nav flex-grow-1">
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <li>@Html.ActionLink("登出", "Logout", "Members", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li><a href="/Members/Index/" class="nav-link">@(User.Identity.Name)</a></li>
+                    <li>@Html.ActionLink("購物車", "Info", "Cart", new { area = "" }, new { @class = "nav-link" })</li>
+                }
+                else
+                {
                     <li>@Html.ActionLink("登入", "Login", "Members", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("註冊會員", "Register", "Members", new { area = "" }, new { @class = "nav-link" })</li>
-                </ul>
+                    <li>@Html.ActionLink("註冊新會員", "Register", "Members", new { area = "" }, new { @class = "nav-link" })</li>
+                }
+
             </div>
         </div>
     </nav>
